<resources>
    <string name="app_name">Go_Organic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="home">Home</string>
    <!--  <string name="menu_gallery">Gallery</string>
      <string name="menu_slideshow">Slideshow</string> -->
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="payment">Home</string>
    <string name="cart">Category</string>
    <string name="farmer">Home</string>
    <string name="payment2">Payment</string>
    <string name="my_cart">My Cart</string>
    <string name="join_as_a_farmer">Join As a Farmer</string>
    <string name="payments">Payments</string>
    <string name="offers">Offers</string>
    <string name="new_products">New Products</string>
    <string name="BillDetails">Bill Details</string>
    <string name="ItemTotal">Item Total</string>
    <string name="LKR1550">LKR 1550</string>
    <string name="DeliveryCharge">Delivery Charge</string>
    <string name="LKR250">LKR 250</string>
    <string name="Discount">Discount</string>
    <string name="LKR00">LKR 00</string>
    <string name="DeliveryAddress">Delivery Address</string>
    <string name="Address">Address</string>
    <string name="TermsAndCondition">Terms And Condition</string>
    <string name="Number">Number</string>
    <string name="ReceiverName">Receiver Name</string>
    <string name="Account">Account</string>
    <string name="Cart">Cart</string>
    <string name="Home">Home</string>
</resources>